--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <input id="itemInput" type="text" placeholder="Enter a item" />
+    <input id="itemInput" type="text" placeholder="Enter a item..." />
     <button id="addItemButton">Add Item</button>
-    <ul id="itemList"></ul>
+    <button id="removeButton">Remove Last Item</button>
+    <ul id="shoppingListDisplay"></ul>
 
 </body>
 </html>
